Overflow in the x  direction resolved

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 * {
   margin: 0;
-  padding: 0;
+  padding: 0;  
+}
+html
+{
+  overflow-x: hidden; 
 }
 
 body {
